<resources>
    <string name="app_name">NearYou</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="ic_qr_scanner">Scan QR Code</string>
    <string name="ic_menu_open">Close menu</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_account">Mon compte</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_profile_access">Générer QR Code d\'accès</string>
    <string name="menu_profile_edit">Modifier profil</string>
    <string name="menu_scan">Scanner QR Code</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_logout">Se déconnecter</string>
    <string name="menu_retry">Réessayer</string>


    <string name="logo_img">NearYou logo</string>
    <string name="input_fname">Prénom</string>
    <string name="input_name">Nom</string>
    <string name="input_age">Âge</string>
    <string name="input_mail">Mail</string>
    <string name="input_status">Statut</string>
    <string name="input_password">Mot de passe</string>
    <string name="input_password_c">Confirmation mot de passe</string>
    <string name="btn_connection">Connexion</string>
    <string name="btn_inscription">Inscription</string>
    <string name="save">Sauvegarder</string>


    <string name="alert_too_young">Vous êtes trop jeune !</string>
    <string name="alert_too_old">Vous êtes trop vieux !</string>
    <string name="alert_email_too_long">Adresse mail trop longue !</string>
    <string name="alert_invalid_email">Adresse mail invalide !</string>
    <string name="alert_email_used">Adresse mail déjà utilisée !</string>
    <string name="alert_name_too_long">Prénom trop long !</string>
    <string name="alert_surname_too_long">Nom trop long !</string>
    <string name="alert_password_too_long">Mot de passe trop long !</string>
    <string name="alert_password_too_short">Mot de passe trop court !</string>
    <string name="alert_password_different">Mot de passe différent !</string>
    <string name="alert_no_input">Pas d\'informations, pas d\'inscription !</string>
    <string name="alert_status_too_long">Trop long !</string>
    <string name="alert_wrong_credential">L\'adresse mail ne correspond pas au mot de passe !</string>

    <string name="title_list_person">Ces personnes sont proches de vous !</string>
    <string name="title_list_person_empty">Vous êtes seul au world …</string>
    <string name="location_needed">Nous avons besoin d\'avoir accès à votre position !</string>
    <string name="location_deactivate">Veuillez activer votre position !</string>
    <string name="camera_needed">Nous avons besoin d\'avoir accès à votre caméra !</string>

    <string name="unknown_error">Une erreur inconnue est survenue ! veuillez réessayer plus tard !</string>
    <string name="no_user">Aucun utilisateur correspond aux données trouvées !</string>
    <string name="no_internet">Please, connect to internet…</string>
    <string name="invalid_data">Données invalides !</string>

    <string name="display_age">%d ans</string>
    <string name="display_name">%S %s</string>
    <string name="display_distance">%s km</string>

    <string name="theme_title">Thème</string>
    <string name="language_title">Langue de l\'application</string>
    <string name="language_french">French</string>
    <string name="language_english">English</string>
    <string name="night_theme_label">Thème sombre</string>

    <string name="notification_location">Service de localisation activée, NearYou vous espionne pour trouver des amis proches…</string>

    <string name="force_logout">Vous avez été déconnecté car vos identifiants ont du être changé…</string>
    <string name="user_data_updated">Modifications enregistrées !</string>
    <string name="user_data_unhautorized">Vous n\'êtes pas autorisé à modifier ce profil !</string>

    <string name="account_visibility">Profil public ?</string>
</resources>
