<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_scan_qr"
            android:icon="@drawable/ic_qr_scanner"
            android:title="@string/menu_scan" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_menu_profile"
                    android:title="@string/menu_profile" />

                <item
                    android:id="@+id/nav_profile_edit"
                    android:icon="@drawable/ic_menu_edit"
                    android:title="@string/menu_profile_edit" />

                <item
                    android:id="@+id/nav_profile_access"
                    android:icon="@drawable/ic_menu_generate_qr"
                    android:title="@string/menu_profile_access" />

                <item
                    android:id="@+id/nav_profile_logout"
                    android:icon="@drawable/ic_menu_logout"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_settings"
                    android:title="@string/menu_settings" />

            </group>
        </menu>
    </item>
</menu>
