<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".activity.InscriptionActivity">

  <ImageView
      android:id="@+id/logo"
      android:layout_width="303dp"
      android:layout_height="174dp"
      android:contentDescription="@string/logo_img"
      app:layout_constraintBottom_toTopOf="@+id/container_name"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@mipmap/ic_logo_foreground" />

  <LinearLayout
      android:id="@+id/container_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/container_super"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/logo">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_name"
        android:text="@string/input_name" />

    <EditText
        android:id="@+id/input_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_rounded"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/container_super"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/container_mail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_name">

    <LinearLayout
        android:id="@+id/container_fname"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/label_fname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/input_fname"
          android:text="@string/input_fname" />

      <EditText
          android:id="@+id/input_fname"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edittext_rounded"
          android:ems="7"
          android:inputType="text"
          android:autofillHints="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_age"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

      <TextView
          android:id="@+id/label_age"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:labelFor="@id/input_age"
          android:text="@string/input_age" />

      <EditText
          android:id="@+id/input_age"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@drawable/edittext_rounded"
          android:ems="3"
          android:inputType="number"
          android:autofillHints="" />

    </LinearLayout>

  </LinearLayout>

  <LinearLayout
      android:id="@+id/container_mail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/container_password"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_super">

    <TextView
        android:id="@+id/label_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_mail"
        android:text="@string/input_mail" />

    <EditText
        android:id="@+id/input_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded"
        android:contentDescription="@string/input_mail"
        android:ems="10"
        android:inputType="textEmailAddress" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/container_password"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/container_password_c"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_mail">

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_password"
        android:text="@string/input_password" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded"
        android:contentDescription="@string/input_password"
        android:ems="10"
        android:inputType="textPassword" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/container_password_c"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@+id/container_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_password">

    <TextView
        android:id="@+id/label_password_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:labelFor="@id/input_password_c"
        android:text="@string/input_password_c" />

    <EditText
        android:id="@+id/input_password_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_rounded"
        android:contentDescription="@string/input_password"
        android:ems="10"
        android:inputType="textPassword" />
  </LinearLayout>

  <LinearLayout
      android:id="@+id/container_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/container_password_c">

    <Button
        android:id="@+id/buttonConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_connection"
        android:text="@string/btn_connection"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/btn_blue" />

    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_connection"
        android:text="@string/btn_inscription"
        android:textColor="#FFFFFF"
        app:backgroundTint="@color/btn_orange" />

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>