<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.fragment.settings.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/container_language"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/label_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_title"
            app:layout_constraintBottom_toTopOf="@+id/divider_theme"
            app:layout_constraintEnd_toEndOf="@+id/divider_theme"
            app:layout_constraintStart_toStartOf="@+id/divider_theme"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_theme"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toTopOf="@+id/container_switch"
            app:layout_constraintEnd_toEndOf="@+id/container_switch"
            app:layout_constraintStart_toStartOf="@+id/container_switch"
            app:layout_constraintTop_toBottomOf="@+id/label_theme" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_theme">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/night_theme_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container_theme">

        <TextView
            android:id="@+id/label_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_title"
            app:layout_constraintBottom_toTopOf="@+id/divider_language"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_language"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="?attr/colorSecondaryVariant"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_language" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_language">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_fr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@+id/container_en"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent">

                <ImageView
                    android:id="@+id/img_fr_flag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/french"
                    app:layout_constraintBottom_toTopOf="@+id/label_fr_flag"
                    app:layout_constraintEnd_toEndOf="@+id/label_fr_flag"
                    app:layout_constraintStart_toStartOf="@+id/label_fr_flag"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_fr_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/language_french"
                    app:layout_constraintBottom_toTopOf="@+id/img_fr_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_fr_flag" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_en"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/container_fr">

                <ImageView
                    android:id="@+id/img_en_flag"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/english"
                    app:layout_constraintBottom_toTopOf="@+id/label_en_flag"
                    app:layout_constraintEnd_toEndOf="@+id/label_en_flag"
                    app:layout_constraintStart_toStartOf="@+id/label_en_flag"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/label_en_flag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/language_english"
                    app:layout_constraintBottom_toTopOf="@+id/img_en_flag"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/img_en_flag" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>